<?xml version="1.0" encoding="utf-8"?>
<resources>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#5C5C5C</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="app_name">DroidCare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_CreateAppointment">Create Appointment</string>
    <string name="ButtonText_Login">Login</string>
    <string name="ButtonText_Register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="ButtonText_ForgetPassword">Forget Password</string>
    <string name="LabelText_Email">E-mail</string>
    <string name="LabelText_Password">Password</string>
    <string name="title_activity_register">Register</string>
    <string name="LabelText_Name">Full name</string>
    <string name="LabelText_Confirm">Confirm Password</string>
    <string name="LabelText_passport">Passport No.</string>
    <string name="LabelText_address">Address</string>
    <string name="LabelText_country">Country</string>
    <string name="LabelText_dob">Date of birth</string>
    <string name="ButtonText_dob">Input</string>
    <string name="title_activity_home">DroidCare</string>
    <string name="LabelText_gender">Gender</string>
    <string name="dob_field">Pick a date:</string>

    <string-array name="GenderField_values">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Country_values">
        <item></item>
        <item>Singapore</item>
        <item>Thailand</item>
        <item>Malaysia</item>
    </string-array>

    <string name="LabelText_nationality">Nationality</string>

    <string-array name="Nationality_values">
        <item></item>
        <item>Indonesian</item>
        <item>Singaporean</item>
        <item>Thailand</item>
        <item>Malaysian</item>
        <item>Vietnamese</item>
    </string-array>

    <string name="upcoming_appointment_list_fragment">Accepted Appointment List</string>
    <string name="pending_appointment_list_fragment">Pending Appointment List</string>
    <string name="action_logout">Logout</string>
    <string name="action_overflow">Settings</string>
    <string name="action_EditProfile">Edit Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="LabelText_OldPassword">Old Password</string>
    <string name="update_btn">Update Profile</string>
    <string name="title_activity_appointment_details">Appointment Details</string>
    <string name="LabelText_Consultant">Consultant</string>
    <string name="LabelText_dateTime">Date and Time</string>
    <string name="LabelText_healthIssue">Health Issue</string>
    <string name="LabelText_appointmentStatus">Status</string>
    <string name="LabelText_remarks">Remarks</string>
    <string name="LabelText_Patient">Patient</string>
    <string name="Button_OK">OK</string>
    <string name="Button_Edit_Appointment">Edit Appointment</string>
    <string name="Button_Cancel_Appointment">Cancel Appointment</string>
    <string name="Button_Accept_Appointment">Accept Appointment</string>
    <string name="Button_Reject_Appointment">Reject Appointment</string>
    <string name="title_activity_edit_appointment">EditAppointmentActivity</string>
    <string name="Button_Logout">Log out</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="appointment_date_field">Date</string>
    <string name="LabelText_ModeOfNotification">Notification Mode</string>
    <string name="LabelText_SMSNotification">SMS</string>
    <string name="LabelText_EmailNotification">Email</string>
    <string name="title_activity_forget_password">Forget Password</string>
    <string name="Label_EmailAddress">E-mail Address</string>
    <string name="Label_ForgetPasswordInstruction">Please enter your registered e-mail address.</string>
    <string name="Button_ForgetPassword">Submit</string>
    <string name="Label_AppointmentID">ID</string>
    <string name="Label_AppointmentPreviousID">Previous ID</string>
    <string name="Label_AppointmentReferrerName">Referrer Name</string>
    <string name="Label_AppointmentReferrerClinic">Referrer Clinic</string>
    <string name="Label_AppointmentType">Appointment Type</string>
    <string name="Label_AppointmentDateTime">Date/Time</string>
    <string name="Label_AppointmentHealthIssue">Health Issue</string>
    <string name="Label_AppointmentConsultant">Consultant</string>
    <string name="Label_AppointmentStatus">Status</string>
    <string name="Label_AppointmentAttachment">Attachment</string>
    <string name="Label_AppointmentPatient">Patient</string>
    <string name="AppointmentAttachmentDescription">Appointment Attachment</string>
    <string name="Label_AppointmentRemarks">Remarks</string>
    <string name="TEST_AppointmentID">239</string>
    <string name="TEST_AppointmentPreviousID">500</string>
    <string name="TEST_AppointmentReferrerName">Dr. KPETUR</string>
    <string name="TEST_AppointmentReferrerClinic">Clinic X</string>
    <string name="TEST_AppointmentType">Referral</string>
    <string name="TEST_AppointmentStatus">Finished</string>
    <string name="TEST_AppointmentDateTime">Monday, 9 March 2015/14.00</string>
    <string name="TEST_AppointmentHealthIssue">Dental problem asdhjasgdajhsgdajhsgdajhsgdajhsgdajhsdgajhsd</string>
    <string name="TEST_AppointmentConsultant">Dr. Andrew Tan</string>
    <string name="TEST_AppointmentPatient">Kenrick</string>
    <string name="TEST_AppointmentRemarks">Lalalalalalalalallaksdjalksjdalksjdlkqwjelqkwjelkasjdlkasjd</string>
    <string name="title_activity_create_appointment">CreateAppointmentActivity</string>
    <string name="Label_ConsultantName">Consultant</string>
    <string name="RadioText_Normal">Normal</string>
    <string name="RadioText_Referral">Referral</string>
    <string name="RadioText_FollowUp">Follow-Up</string>
    <string name="Label_AppointmentDate">Date</string>
    <string name="Label_AppointmentTime">Time</string>
    <string name="ButtonText_AppointmentAttachment">Select Attachment</string>
    <string name="ButtonText_CreateAppointment">Create Appointment</string>
    <string name="ButtonText_EditAppointment">Edit Appointment</string>

</resources>
