<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginBottom="3dp"        
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/Label_AppointmentID"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/Label_AppointmentID" />
	    
	    <TextView
	        android:id="@+id/Field_AppointmentID"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/TEST_AppointmentID" />
	    
	 </LinearLayout>
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"        
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/Label_AppointmentType"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/Label_AppointmentType" />
	    
	    <TextView
	        android:id="@+id/Field_AppointmentType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/TEST_AppointmentType" />
	    
	 </LinearLayout>
	 <LinearLayout
	    android:id="@+id/LL_AppointmentConsultant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"        
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/Label_AppointmentConsultant"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/Label_AppointmentConsultant" />
	    
	    <TextView
	        android:id="@+id/Field_AppointmentConsultant"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/TEST_AppointmentConsultant" />
	    
	 </LinearLayout>
	 <LinearLayout
	    android:id="@+id/LL_AppointmentPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"        
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/Label_AppointmentPatient"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/Label_AppointmentPatient" />
	    
	    <TextView
	        android:id="@+id/Field_AppointmentPatient"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/TEST_AppointmentPatient" />
	    
	 </LinearLayout>
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/Label_AppointmentDateTime"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/Label_AppointmentDateTime" />
	    
	    <TextView
	        android:id="@+id/Field_AppointmentDateTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/TEST_AppointmentDateTime" />
	    
	 </LinearLayout>
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/Label_AppointmentHealthIssue"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/Label_AppointmentHealthIssue" />
	    
	    <TextView
	        android:id="@+id/Field_AppointmentHealthIssue"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/TEST_AppointmentHealthIssue" />
	    
	 </LinearLayout>
</LinearLayout>
