<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droidcare.HomeActivity" >

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/action_overflow" >
        <menu>
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/action_EditProfile"
                android:title="@string/action_EditProfile" />
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/action_logout"
        android:showAsAction="always"
        android:title="@string/action_logout" />

</menu>
